# av-brainvision-sync-pipeline

./: .gitignore  .gitmodules  README.md  audio_eeg_sync.py  environment.yml  helper_functions.py  pyproject.toml  video_sync_wrapper.py
src/av_bv_sync/: alignment.py  audio.py  beep_detection.py  brainvision.py  main.py  ui.py  video_sync_wrapper.py
