[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "av-brainvision-sync-pipeline"
version = "0.1.0"
description = "BrainVision, audio, and video synchronization pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.3.1",
  "scipy==1.16.1",
  "mne==1.10.1",
  "soundfile==0.13.1",
  "cffi==2.0.0",
  "pycparser==2.22",
  "pandas==2.3.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2024.2",
  "tzdata==2025.2",
  "jinja2==3.1.6",
  "matplotlib==3.10.3",
  "plotly==6.2.0",
  "pydub==0.25.1",
  "tqdm==4.67.1",
  "datajoint==0.14.6",
  "python-dotenv==1.1.1",
  "prefect==3.4.23",
  "PyYAML==6.0.2",
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.0",
  "mkdocs-mermaid2-plugin==1.2.3",
  "mkdocs-section-index==0.3.10",
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
  "python-multipart==0.0.21",
  "brpylib @ git+https://github.com/BCM-Neurosurgery/Blackrock-Python-Utilities.git@main",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]