[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "av-brainvision-sync-pipeline"
version = "0.1.0"
description = "BrainVision, audio, and video synchronization pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.3.1",
  "scipy==1.16.1",
  "mne==1.10.1",
  "soundfile==0.13.1",
  "pandas==2.3.1",
  "matplotlib==3.10.3",
  "pydub==0.25.1",
  "tqdm==4.67.1",
  "PyYAML==6.0.2",
  "brpylib @ git+https://github.com/BCM-Neurosurgery/Blackrock-Python-Utilities.git@main",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]